--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formación en Vivo - AUTRA</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <script defer>
-    // Redirige al login si no hay sesión
     if (!localStorage.getItem('studentCode')) {
-      window.location.href = '/login.html';
+      window.location.href = 'login.html';
     } else {
-      // Muestra el código de alumno
       document.getElementById('student-id').textContent = localStorage.getItem('studentCode');
     }
   </script>
 
-  <!-- Encabezado con branding -->
   <header class="autra-header">
     <div class="autra-logo">
-      <img src="/autra-logo.png" alt="AUTRA Logo">
+      <img src="autra-logo.png" alt="AUTRA Logo">
       <h1>AUTRA</h1>
     </div>
     <div class="header-right">
@@ -31,9 +28,7 @@
     </div>
   </header>
 
-  <!-- Contenedor principal -->
   <div id="container">
-    <!-- Panel izquierdo: Zoom -->
     <aside id="left-panel">
       <h2><i class="fas fa-video"></i> Clase en Vivo (Zoom)</h2>
       <div id="zoom-container">
@@ -47,7 +42,6 @@
       </div>
     </aside>
 
-    <!-- Panel derecho: PDF -->
     <main id="right-panel">
       <div id="test-header">
         <h2><i class="fas fa-file-pdf"></i> Mi Test</h2>
@@ -63,7 +57,6 @@
         <canvas id="annotationCanvas" class="annotationCanvas"></canvas>
       </div>
 
-      <!-- Controles de navegación al pie del PDF -->
       <div id="pdf-controls" style="display: none;">
         <button onclick="prevPage()" title="Página anterior"><i class="fas fa-arrow-left"></i></button>
         <span id="page-info">Página <span id="currentPage">0</span> / <span id="totalPages">0</span></span>
@@ -71,7 +64,6 @@
       </div>
     </main>
 
-    <!-- Barra lateral horizontal fija -->
     <div id="sidebar" class="sidebar">
       <button class="sidebar-btn" id="toggle-draw-btn" onclick="toggleDrawingMode()" title="Activar/Desactivar Pizarra">
         <i class="fas fa-pen"></i>
@@ -106,37 +98,35 @@
     </div>
   </div>
 
-  <!-- Librerías -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-  <script src="/js/pdf-viewer.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const studentCode = localStorage.getItem('studentCode');
-    console.log('studentCode en index:', studentCode);
-    if (!studentCode) {
-      window.location.href = '/login.html';
-      return;
-    }
+  <script src="js/pdf-viewer.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const studentCode = localStorage.getItem('studentCode');
+      console.log('studentCode en index:', studentCode);
+      if (!studentCode) {
+        window.location.href = 'login.html';
+        return;
+      }
 
-    const studentIdElement = document.getElementById('student-id');
-    if (studentIdElement) {
-      studentIdElement.textContent = studentCode;
-    } else {
-      console.error('Elemento con id "student-id" no encontrado');
-    }
+      const studentIdElement = document.getElementById('student-id');
+      if (studentIdElement) {
+        studentIdElement.textContent = studentCode;
+      } else {
+        console.error('Elemento con id "student-id" no encontrado');
+      }
 
-    // Asegurar que el botón de logout esté registrado
-    const logoutButton = document.querySelector('.logout-btn');
-    if (logoutButton) {
-      logoutButton.addEventListener('click', () => {
-        console.log('Cerrando sesión');
-        localStorage.removeItem('studentCode');
-        window.location.href = '/login.html';
-      });
-    } else {
-      console.error('Botón de logout no encontrado');
-    }
-  });
-</script>
+      const logoutButton = document.querySelector('.logout-btn');
+      if (logoutButton) {
+        logoutButton.addEventListener('click', () => {
+          console.log('Cerrando sesión');
+          localStorage.removeItem('studentCode');
+          window.location.href = 'login.html';
+        });
+      } else {
+        console.error('Botón de logout no encontrado');
+      }
+    });
+  </script>
 </body>
 </html>
