--- a/login.html
+++ b/login.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - AUTRA</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="login-container">
-    <img src="/autra-logo.png" alt="AUTRA Logo" class="logo">
+    <img src="autra-logo.png" alt="AUTRA Logo" class="logo">
     <h2>Inicio de Sesión</h2>
     <form id="login-form" onsubmit="handleLogin(event)">
       <div class="input-group">
@@ -24,6 +24,6 @@
       <p id="error-message" style="display: none;"></p>
     </form>
   </div>
-  <script src="/js/login.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
